[FIX] - Fixing the style of the checkout on mobile and tablet, still missing some adjustments

--- a/src/styles/pages/Checkout.scss
+++ b/src/styles/pages/Checkout.scss
@@ -1,21 +1,27 @@
 @import '../_variables.scss';
 .checkout {
     display: grid;
-    grid-template-columns: 70% 30%;
-    grid-template-rows: 10% 80%;
+    grid-template-columns: 100%;
+    grid-template-rows: 9.4rem auto auto;
 }
 .checkout__title {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
     place-self: center;
 }
+
 .checkout__total {
-    margin-top: 2rem;
-    justify-self: center;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    padding-bottom: 2rem;
 }
 .checkout__total p {
-    font-size: 1.8rem;
+    grid-column: 1 / 3;
+    font-size: 1.7rem;
     font-weight: $bold;
+}
+.checkout__button--cancel, .checkout__button--pay {
+    font-size: 1.3rem;
+    height: 4rem;
 }
 .checkout__button--pay, .checkout__button--cancel {
     margin-top: 3rem;
@@ -26,4 +32,26 @@
 }
 .checkout__button--cancel {
     background-color: $red;
+}
+@media (min-width: 1024px) {
+    .checkout {
+        display: grid;
+        grid-template-columns: 70% 30%;
+        grid-template-rows: 10% 80%;
+    }
+    .checkout__title {
+        grid-row: 1 / 2;
+        grid-column: 1 / 3;
+        place-self: center;
+    }
+    .checkout__total {
+        grid-template-rows: 10% 90%;
+        margin-top: 2rem;
+        justify-self: center;
+    }
+    .checkout__total p {
+        font-size: 1.8rem;
+        font-weight: $bold;
+    }
+    
 }
